[Feat] [Tk-73] (QuanNV) Mandala Pay UI and flow activate  mandala pay

--- a/madala/src/app/globals.css
+++ b/madala/src/app/globals.css
@@ -310,3 +310,8 @@
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
+
+.pin-input-group [data-slot="input-otp-slot"] {
+  -webkit-text-security: disc;
+  text-security: disc;
+}
